--- a/Mysite/index.html
+++ b/Mysite/index.html
@@ -251,7 +251,7 @@ ScrollReveal().reveal('.home-content p, .about-content', {
 });
 
 const typed = new Typed('.multi-line', {
-  strings: ['App Developer', 'Web Devloper', 'Backend Devloper'],
+  strings: ['App Developer', 'Web Developer', 'Backend Developer'],
   typeSpeed: 100,
   backSpeed: 100,
   backDelay: 1000,
